--- a/styles/login.css
+++ b/styles/login.css
@@ -23,6 +23,11 @@ body {
     text-align: center;
 }
 
+.error-msg {
+    color: red;
+    margin: 0;
+}
+
 .login-title {
     font-size: 1.75rem;
     color: #00ffff;
