--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -21,19 +21,6 @@ body {
     overflow-y: auto;
 }
 
-.logo {
-    font-size: 26px;
-    font-weight: bold;
-    color: #00ffff;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    transition: transform 0.3s;
-}
-
-.logo:hover {
-    transform: scale(1.1);
-}
-
 .no-products {
     font-size: 1.5rem;
     color: #9ca3af;
@@ -66,27 +53,24 @@ body {
 }
 
 .catalog-items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: -15px;
-    position: relative;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    justify-items: center;
 }
+
 
 .product-card {
     position: relative;
     background: #1f2937;
     border-radius: 0.5rem;
     overflow: hidden;
-    width: 300px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    box-shadow: 0 4px 6px #9333ea;
     transition: box-shadow 0.3s ease, transform 0.3s ease;
     display: flex;
     flex-direction: column;
-    margin: 15px;
     min-width: 0;
-    position: relative;
-    width: calc(33.33333% - 30px);
     z-index: 1;
 }
 
@@ -148,7 +132,6 @@ body {
 }
 
 .description-container {
-    max-height: 3rem;
     height: 50px;
     margin: 1rem 0;
 }
@@ -158,7 +141,10 @@ body {
     color: #9ca3af;
     line-height: 1.4;
     overflow: hidden;
-    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
     margin: 0;
 }
 
