--- a/styles/listProductsAdmin.css
+++ b/styles/listProductsAdmin.css
@@ -9,6 +9,28 @@
     --border: #333;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+.container {
+    display: flex;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.main-content {
+    flex: 1;
+    padding: 2rem;
+    overflow-y: auto;
+    height: 100vh;
+    background-color: black;
+}
+
 .barra-superior {
     display: flex;
     justify-content: flex-end;
@@ -20,10 +42,10 @@
 .barra-superior .btn-agregar,
 .barra-superior .btn-desactivar {
     padding: 10px 18px;
-    background: linear-gradient(to right, #0f3460, #16213e);
+    background: linear-gradient(to right, #0d4991, #091127);
     border: none;
     border-radius: 8px;
-    color: white;
+    color: var(--text-light);
     font-weight: bold;
     cursor: pointer;
     transition: transform 0.2s ease;
@@ -32,7 +54,7 @@
 
 .barra-superior .btn-agregar:hover,
 .barra-superior .btn-desactivar:hover {
-    background: linear-gradient(to left, #0f3460, #16213e);
+    background: linear-gradient(to left, #0d4991, #091127);
     transform: scale(1.05);
 }
 
@@ -72,7 +94,7 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
-.btn-icon-eliminar {
+.btn-icon-eliminar, .btn-icon-modificar {
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -83,29 +105,17 @@
     justify-content: center;
     transition: all 0.2s ease-in-out;
     font-size: 20px;
+}
+
+.btn-icon-eliminar {
     color: var(--danger);
 }
 
-.btn-icon-eliminar:hover {
-    background-color: var(--hover-dark);
-    transform: scale(1.1);
-}
-
 .btn-icon-modificar {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    padding: 12px;
-    border-radius: 6px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.2s ease-in-out;
-    font-size: 20px;
     color: var(--info);
 }
 
-.btn-icon-modificar:hover {
+.btn-icon-eliminar:hover, .btn-icon-modificar:hover {
     background-color: var(--hover-dark);
     transform: scale(1.1);
 }
@@ -118,14 +128,12 @@
     align-items: center;
 }
 
-
-
-/* input[type="checkbox"] {
+input[type="checkbox"] {
     width: 18px;
     height: 18px;
     cursor: pointer;
     accent-color: var(--primary);
-} */
+}
 
 .acciones form {
     margin: 0;
