--- a/styles/login.css
+++ b/styles/login.css
@@ -83,7 +83,7 @@ body {
 }
 
 .login-button {
-    background: linear-gradient(45deg, #00ffff, #00a2ff);
+    background: linear-gradient(to right, rgb(0, 255, 255), #00a2ff);
     color: white;
     padding: 0.75rem;
     border-radius: 0.5rem;
@@ -95,7 +95,7 @@ body {
 }
 
 .login-button:hover {
-    background: linear-gradient(45deg, #00a2ff, #00ffff);
+    background: linear-gradient(to left,  #00ffff, #00a2ff);
     transform: scale(1.05);
 }
 
