--- a/styles/listProductsAdmin.css
+++ b/styles/listProductsAdmin.css
@@ -25,9 +25,8 @@ html, body {
 
 .main-content {
     flex: 1;
-    padding: 2rem;
+    padding: 2rem 2rem 7rem 2rem;
     overflow-y: auto;
-    height: 100vh;
     background-color: black;
 }
 
@@ -38,8 +37,6 @@ html, body {
     gap: 2rem;
     margin-bottom: 1.5rem;
 }
-
-
 
 .tabla-productos {
     width: 100%;
@@ -77,7 +74,8 @@ html, body {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
-.btn-icon-eliminar, .btn-icon-modificar {
+.btn-icon-eliminar,
+.btn-icon-modificar {
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -98,7 +96,8 @@ html, body {
     color: var(--info);
 }
 
-.btn-icon-eliminar:hover, .btn-icon-modificar:hover {
+.btn-icon-eliminar:hover,
+.btn-icon-modificar:hover {
     background-color: var(--hover-dark);
     transform: scale(1.1);
 }
