--- a/styles/addOrModifyProduct.css
+++ b/styles/addOrModifyProduct.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -77,4 +78,13 @@ html, body {
     color: #d1d1d6;
     font-size: .95rem;
     margin-top: .5rem;
+}
+
+.image-advice {
+    font-size: 0.9em;
+    border-radius: 6px;
+    width: 70%;
+    padding: .2rem .5rem;
+    background-color: rgb(255, 234, 188);
+    color: black
 }
