Refactoricé la gestión de productos y la interfaz de usuario:
- Actualicé los estilos CSS para las páginas de favoritos y productos, mejorando su atractivo visual y capacidad de respuesta.
Introduje nuevas funciones de gestión de productos, permitiendo múltiples géneros y plataformas con su respectiva gestión de stock.
- Mejoré la validación y el manejo de errores en los procesos de creación y modificación de productos.
- Añadí una página de vista detallada de productos con productos relacionados y selección de plataformas.
- Eliminé el archivo obsoleto product.php y simplifiqué la navegación hacia detailProduct.php.
- Mejoré la experiencia del usuario en las funcionalidades de favoritos y carrito.
- Implementé mejoras en la gestión de sesiones para un mejor comportamiento al cerrar sesión.

--- a/styles/products.css
+++ b/styles/products.css
@@ -57,6 +57,9 @@ html, body {
     text-align: center;
     border-bottom: 1px solid var(--border);
     vertical-align: middle;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .tabla-productos th {
@@ -66,12 +69,24 @@ html, body {
     text-transform: uppercase;
 }
 
-.tabla-img {
-    width: 60px;
+.tabla-productos td {
+    max-width: 250px;
+}
+
+.tabla-productos td img {
+    width: 75px;
     height: auto;
     border-radius: 6px;
     object-fit: cover;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    display: flex;
+    margin: 0 auto;
+}
+
+.tabla-productos td:nth-child(6),
+.tabla-productos td:nth-child(7) {
+    max-width: 200px;
+    padding: 8px;
 }
 
 .btn-icon-eliminar,
