Mejoré la función de modificación de productos y la interfaz de usuario, agregando gestión de stock por plataforma y mejorando la disposición de los elementos en el formulario.

--- a/styles/addOrModifyProduct.css
+++ b/styles/addOrModifyProduct.css
@@ -77,13 +77,51 @@ body {
 .product-container label {
     color: #d1d1d6;
     font-size: .95rem;
-    margin-top: .5rem;
+}
+
+.generos-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: stretch;
+    justify-content: space-between;
+    align-content: space-between;
+    align-items: center;
+}
+
+.genero-label {
+    margin: .5rem 0;
+    padding: 0 .5rem;
+}
+
+.plataforma {
+    display: flex;
+    margin: .5rem 0;
+    padding: 0 .5rem;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.plataforma-label {
+    width: 35%;
+}
+
+.plataforma-stock {
+    width: 55%;
+}
+
+.plataforma-stock:disabled {
+    background-color: #2a2a2a; /* más oscuro para fondo oscuro */
+    color: #999;
+    border-color: #555;
+    opacity: 0.6;
+    cursor: not-allowed;
 }
 
 .image-advice {
     font-size: 0.9em;
     border-radius: 6px;
     width: 70%;
+    margin: 0;
     padding: .2rem .5rem;
     background-color: rgb(255, 234, 188);
     color: black
