--- a/styles/detailProduct.css
+++ b/styles/detailProduct.css
@@ -26,7 +26,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 2rem 3rem;
+    margin: 2rem auto;
+    max-width: 1400px;
     align-items: center;
 }
 
@@ -34,7 +35,6 @@ body {
     display: flex;
     justify-content: flex-start;
     width: 100%;
-    max-width: 1400px;
 }
 
 .back-button {
@@ -205,7 +205,7 @@ select {
 #add-to-cart-btn {
     width: 70%;
     font-size: 1.5rem;
-    font-weight:lighter;
+    font-weight: lighter;
 }
 
 #add-to-fav-btn {
