--- a/styles/products.css
+++ b/styles/products.css
@@ -30,12 +30,103 @@ html, body {
     background-color: black;
 }
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--bg-header);
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.header h1 {
+    color: var(--text-light);
+    font-size: 24px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    justify-content: space-between;
+}
+
+#search-input {
+    width: 300px;
+    padding: 10px;
+    border: 1px solid var(--border);
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: var(--bg-main);
+    color: var(--text-light);
+}
+
+#search-input::placeholder {
+    color: #aaa;
+}
+
+#search-button {
+    background-color: var(--primary);
+    color: var(--text-light);
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
+}
+
+#search-button i {
+    margin-right: 5px;
+}
+
+#search-button:hover {
+    background-color: #00bcd4;
+}
+
 .barra-superior {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: 2rem;
     margin-bottom: 1.5rem;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
+}
+
+.pagination-btn {
+    padding: 10px 15px;
+    border: 1px solid var(--border);
+    border-radius: 5px;
+    background-color: var(--bg-main);
+    color: var(--text-light);
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.pagination-btn:hover {
+    background-color: var(--primary);
+    color: var(--bg-main);
+}
+
+.pagination-btn.active {
+    background-color: var(--primary);
+    color: var(--bg-main);
+    font-weight: bold;
+    pointer-events: none;
 }
 
 .tabla-productos {
@@ -123,13 +214,6 @@ html, body {
     gap: 10px;
     margin: -1px;
     align-items: center;
-}
-
-input[type="checkbox"] {
-    width: 18px;
-    height: 18px;
-    cursor: pointer;
-    accent-color: var(--primary);
 }
 
 .acciones form {
