--- a/styles/products.css
+++ b/styles/products.css
@@ -9,11 +9,13 @@
     --border: #333;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     font-family: 'Segoe UI', sans-serif;
 }
 
@@ -71,20 +73,8 @@ html, body {
 
 #search-button {
     background-color: var(--primary);
-    color: var(--text-light);
-    border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 10px;
     transition: background-color 0.3s ease;
-}
-
-#search-button i {
-    margin-right: 5px;
 }
 
 #search-button:hover {
@@ -135,7 +125,8 @@ html, body {
     background-color: var(--bg-main);
     border-radius: 12px;
     overflow: hidden;
-    color: var(--text-light)
+    color: var(--text-light);
+    table-layout: fixed;
 }
 
 .tabla-productos thead {
@@ -150,7 +141,9 @@ html, body {
     vertical-align: middle;
     white-space: nowrap;
     overflow: hidden;
+    overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .tabla-productos th {
@@ -206,6 +199,8 @@ html, body {
 .btn-icon-modificar:hover {
     background-color: var(--hover-dark);
     transform: scale(1.1);
+    filter: brightness(1.2);
+    transition: 0.2s ease;
 }
 
 .acciones {
@@ -218,4 +213,35 @@ html, body {
 
 .acciones form {
     margin: 0;
+}
+
+th:nth-child(1),
+td:nth-child(1) {
+    width: 20%;
+}
+
+th:nth-child(2),
+td:nth-child(2),
+th:nth-child(6),
+td:nth-child(6),
+th:nth-child(7),
+td:nth-child(7) {
+    width: 100%;
+}
+
+th:nth-child(3),
+td:nth-child(3) {
+    width: 80%;
+}
+
+th:nth-child(4),
+td:nth-child(4),
+th:nth-child(5),
+td:nth-child(5) {
+    width: 50%;
+}
+
+th:nth-child(8),
+td:nth-child(8) {
+    width: 70%;
 }
