--- a/styles/profile.css
+++ b/styles/profile.css
@@ -30,6 +30,9 @@ body {
 }
 
 .main-content {
+    width: 100%;
+    height: auto;
+    overflow-y: auto;
     padding-top: 80px;
     padding-bottom: 100px;
 }
@@ -53,8 +56,8 @@ body {
     align-items: flex-start;
 }
 
-.profile-wrapper{
-    margin: 3rem auto;
+.profile-wrapper {
+    margin: 2rem auto 0 auto;
 }
 
 .profile-container,
